--- a/config/crds/cluster_v1alpha1_machineset.yaml
+++ b/config/crds/cluster_v1alpha1_machineset.yaml
@@ -101,6 +101,11 @@ spec:
                                   type: string
                               type: object
                           type: object
+                      oneOf:
+                      - required:
+                        - value
+                      - required:
+                        - valueFrom
                       type: object
                     taints:
                       description: Taints is the full, authoritative list of taints
